// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test OverviewList matches the snapshot and displays loading state 1`] = `
<div>
  <div
    class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col
                    style="width: 180px;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      数据源
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      状态
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: right;"
                    >
                      审核通过率
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: right;"
                    >
                      审核结果评分
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      待操作人
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线人
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线开始时间
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线结束时间
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      定时上线时间
                    </th>
                    <th
                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                      scope="col"
                      style="position: sticky; right: 0px;"
                    >
                      操作
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="40"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      mysql
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        class="css-3q8fl"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
                            stroke="#41BF9A"
                            stroke-width="1.5"
                          />
                          <path
                            d="m5.083 8 2.084 2.083 4.166-4.166"
                            stroke="#41BF9A"
                            stroke-linejoin="round"
                            stroke-width="1.5"
                          />
                        </svg>
                        <span>
                          上线成功
                        </span>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: right;"
                    >
                      <span>
                        100%
                      </span>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: right;"
                    >
                      100
                    </td>
                    <td
                      class="ant-table-cell"
                    />
                    <td
                      class="ant-table-cell"
                    >
                      admin
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2024-01-17 13:23:32
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2024-01-17 13:23:32
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      -
                    </td>
                    <td
                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                      style="position: sticky; right: 0px;"
                    >
                      <div
                        class="css-new95e"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              hidden=""
                              type="button"
                            >
                              <span>
                                再次执行
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              hidden=""
                              type="button"
                            >
                              <span>
                                中止上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                立即上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                定时上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              hidden=""
                              type="button"
                            >
                              <span>
                                取消定时上线
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="41"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      mysql2
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        class="css-3q8fl"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
                            stroke="#41BF9A"
                            stroke-width="1.5"
                          />
                          <path
                            d="m5.083 8 2.084 2.083 4.166-4.166"
                            stroke="#41BF9A"
                            stroke-linejoin="round"
                            stroke-width="1.5"
                          />
                        </svg>
                        <span>
                          上线成功
                        </span>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: right;"
                    >
                      <span>
                        100%
                      </span>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: right;"
                    >
                      100
                    </td>
                    <td
                      class="ant-table-cell"
                    />
                    <td
                      class="ant-table-cell"
                    >
                      admin
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2024-01-17 13:23:32
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2024-01-17 13:23:32
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      -
                    </td>
                    <td
                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                      style="position: sticky; right: 0px;"
                    >
                      <div
                        class="css-new95e"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              hidden=""
                              type="button"
                            >
                              <span>
                                再次执行
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              hidden=""
                              type="button"
                            >
                              <span>
                                中止上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                立即上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                定时上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              hidden=""
                              type="button"
                            >
                              <span>
                                取消定时上线
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test OverviewList matches the snapshot and shows error message in the overview table 1`] = `
<div>
  <div
    class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col
                    style="width: 180px;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      数据源
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      状态
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: right;"
                    >
                      审核通过率
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: right;"
                    >
                      审核结果评分
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      待操作人
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线人
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线开始时间
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线结束时间
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      定时上线时间
                    </th>
                    <th
                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                      scope="col"
                      style="position: sticky; right: 0px;"
                    >
                      操作
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="10"
                    >
                      <div
                        class="ant-table-expanded-row-fixed"
                        style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                      />
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test OverviewList matches the snapshot for the default task result setup 1`] = `
<div>
  <div
    class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col
                    style="width: 180px;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      数据源
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      状态
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: right;"
                    >
                      审核通过率
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                      style="text-align: right;"
                    >
                      审核结果评分
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      待操作人
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线人
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线开始时间
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      上线结束时间
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      定时上线时间
                    </th>
                    <th
                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                      scope="col"
                      style="position: sticky; right: 0px;"
                    >
                      操作
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="40"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      mysql
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        class="css-3q8fl"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
                            stroke="#41BF9A"
                            stroke-width="1.5"
                          />
                          <path
                            d="m5.083 8 2.084 2.083 4.166-4.166"
                            stroke="#41BF9A"
                            stroke-linejoin="round"
                            stroke-width="1.5"
                          />
                        </svg>
                        <span>
                          上线成功
                        </span>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: right;"
                    >
                      <span>
                        100%
                      </span>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: right;"
                    >
                      100
                    </td>
                    <td
                      class="ant-table-cell"
                    />
                    <td
                      class="ant-table-cell"
                    >
                      admin
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2024-01-17 13:23:32
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2024-01-17 13:23:32
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      -
                    </td>
                    <td
                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                      style="position: sticky; right: 0px;"
                    >
                      <div
                        class="css-new95e"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              hidden=""
                              type="button"
                            >
                              <span>
                                再次执行
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              hidden=""
                              type="button"
                            >
                              <span>
                                中止上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                立即上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                定时上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              hidden=""
                              type="button"
                            >
                              <span>
                                取消定时上线
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="41"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      mysql2
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        class="css-3q8fl"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
                            stroke="#41BF9A"
                            stroke-width="1.5"
                          />
                          <path
                            d="m5.083 8 2.084 2.083 4.166-4.166"
                            stroke="#41BF9A"
                            stroke-linejoin="round"
                            stroke-width="1.5"
                          />
                        </svg>
                        <span>
                          上线成功
                        </span>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: right;"
                    >
                      <span>
                        100%
                      </span>
                    </td>
                    <td
                      class="ant-table-cell"
                      style="text-align: right;"
                    >
                      100
                    </td>
                    <td
                      class="ant-table-cell"
                    />
                    <td
                      class="ant-table-cell"
                    >
                      admin
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2024-01-17 13:23:32
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2024-01-17 13:23:32
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      -
                    </td>
                    <td
                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                      style="position: sticky; right: 0px;"
                    >
                      <div
                        class="css-new95e"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              hidden=""
                              type="button"
                            >
                              <span>
                                再次执行
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              hidden=""
                              type="button"
                            >
                              <span>
                                中止上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                立即上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                定时上线
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                              disabled=""
                              hidden=""
                              type="button"
                            >
                              <span>
                                取消定时上线
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test OverviewList render snap when is mobile 1`] = `
<body>
  <div>
    <div
      class="css-4rz5c3"
    >
      <div
        class="ant-list ant-list-split"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item overview-list-item"
              >
                <div
                  class="ant-card ant-card-bordered overview-card"
                >
                  <div
                    class="ant-card-body"
                  >
                    <div
                      class="overview-card-title"
                    >
                      mysql
                    </div>
                    <div
                      class="ant-descriptions ant-descriptions-small overview-card-desc"
                    >
                      <div
                        class="ant-descriptions-view"
                      >
                        <table>
                          <tbody>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    数据源
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    mysql
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    状态
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    <div
                                      class="css-3q8fl"
                                    >
                                      <svg
                                        fill="none"
                                        height="16"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
                                          stroke="#41BF9A"
                                          stroke-width="1.5"
                                        />
                                        <path
                                          d="m5.083 8 2.084 2.083 4.166-4.166"
                                          stroke="#41BF9A"
                                          stroke-linejoin="round"
                                          stroke-width="1.5"
                                        />
                                      </svg>
                                      <span>
                                        上线成功
                                      </span>
                                    </div>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    审核通过率
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    <span>
                                      100%
                                    </span>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    审核结果评分
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    100
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    待操作人
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    上线人
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    admin
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    上线开始时间
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    2024-01-17 13:23:32
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    上线结束时间
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    2024-01-17 13:23:32
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    定时上线时间
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    -
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center overview-card-actions"
                      style="flex-wrap: wrap; margin-bottom: -8px;"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px; padding-bottom: 8px;"
                      >
                        <span>
                          <button
                            class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1vnelmv"
                            disabled=""
                            type="button"
                          >
                            <span>
                              立即上线
                            </span>
                          </button>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                        style="padding-bottom: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1vnelmv"
                          disabled=""
                          type="button"
                        >
                          <span>
                            定时上线
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="ant-list-item overview-list-item"
              >
                <div
                  class="ant-card ant-card-bordered overview-card"
                >
                  <div
                    class="ant-card-body"
                  >
                    <div
                      class="overview-card-title"
                    >
                      mysql2
                    </div>
                    <div
                      class="ant-descriptions ant-descriptions-small overview-card-desc"
                    >
                      <div
                        class="ant-descriptions-view"
                      >
                        <table>
                          <tbody>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    数据源
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    mysql2
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    状态
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    <div
                                      class="css-3q8fl"
                                    >
                                      <svg
                                        fill="none"
                                        height="16"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
                                          stroke="#41BF9A"
                                          stroke-width="1.5"
                                        />
                                        <path
                                          d="m5.083 8 2.084 2.083 4.166-4.166"
                                          stroke="#41BF9A"
                                          stroke-linejoin="round"
                                          stroke-width="1.5"
                                        />
                                      </svg>
                                      <span>
                                        上线成功
                                      </span>
                                    </div>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    审核通过率
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    <span>
                                      100%
                                    </span>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    审核结果评分
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    100
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    待操作人
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    上线人
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    admin
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    上线开始时间
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    2024-01-17 13:23:32
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    上线结束时间
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    2024-01-17 13:23:32
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-descriptions-row"
                            >
                              <td
                                class="ant-descriptions-item"
                                colspan="1"
                              >
                                <div
                                  class="ant-descriptions-item-container"
                                >
                                  <span
                                    class="ant-descriptions-item-label"
                                  >
                                    定时上线时间
                                  </span>
                                  <span
                                    class="ant-descriptions-item-content"
                                  >
                                    -
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center overview-card-actions"
                      style="flex-wrap: wrap; margin-bottom: -8px;"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px; padding-bottom: 8px;"
                      >
                        <span>
                          <button
                            class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1vnelmv"
                            disabled=""
                            type="button"
                          >
                            <span>
                              立即上线
                            </span>
                          </button>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                        style="padding-bottom: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1vnelmv"
                          disabled=""
                          type="button"
                        >
                          <span>
                            定时上线
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
